# libguestfs

./: .gitignore  Makefile.am  configure.ac
generator/: Makefile.am  generator_actions.ml  generator_gobject.ml  generator_main.ml
gobject/: Makefile.am  guestfs-gobject.c  guestfs-gobject.h  test.c  test.h  test.js
po/: POTFILES.in
